# todo

./: .clang-format  .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: c-cpp.yml
cli/: Makefile  Makefile.am  todo  todo_cli.c
gui/: Makefile  main.c
lib/: Makefile  Makefile.am  README.md  db.c  db.h  group.c  group.h  item.c  item.h  mem.c  mem.h  str.c  str.h  todo.c  todo.h  todo_group.c  todo_group.h  todo_group_list.c  todo_group_list.h  todo_item.c  todo_item.h
lib/test/: Makefile  Makefile.am  README.md  check_group  check_group_list  check_item  check_load  load_all.xml  test_group.c  test_group_list.c  test_item.c  test_load.c
test/: Makefile.am  check_db.c  check_group.c  check_item.c  check_str.c  itemsave.db
