lib_LTLIBRARIES = libtodo.la
libtodo_la_SOURCES = todo.h todo.c \
                     item.h item.c \
                     group.h group.c \
                     str.h str.c \
                     mem.h mem.c \
                     db.h db.c

libtodo_la_CFLAGS = @SQLITE_CFLAGS@
libtodo_la_LIBADD = @SQLITE_LIBS@
